# boinc

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  plan.md  rustfmt.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
Vibecoding/: Instructions.md  deploy.md  deployment.md
crates/boinc-app/: Cargo.toml
crates/boinc-app/src/: history.rs  ipc.rs  main.rs  queue.rs  settings.rs  state.rs  tray.rs  ui.rs  update.rs
crates/boinc-cli/: Cargo.toml
crates/boinc-cli/src/: main.rs
crates/boinc-cli/tests/: cli.rs  integrate.rs
crates/boinc-core/: Cargo.toml  README.md
crates/boinc-core/src/: converter.rs  error.rs  format.rs  lib.rs  output.rs  pipeline.rs  registry.rs
crates/boinc-core/src/converters/: libreoffice.rs  markdown.rs  mod.rs  raster.rs  vector.rs
crates/boinc-core/tests/: conversions.rs  libreoffice.rs  markdown.rs
crates/boinc-integration/: Cargo.toml
crates/boinc-integration/src/: entries.rs  ipc.rs  lib.rs  linux.rs  macos.rs  manifest.rs  windows.rs
examples/: README.md  sample.md
k8s/boinc/: deployment.yaml  namespace.yaml  service.yaml
packaging/linux/: boinc.desktop
runner/: .gitignore  README.md  config.env.example  deploy-k3s.sh  install-host.sh  uninstall-host.sh  workflow-example.yml
runner/k8s/: deployment.yaml  namespace.yaml  secret.example.yaml
scripts/: deploy-k3s.sh  dev.sh  package-macos.sh
site/: Dockerfile  app.js  index.html  nginx.conf  package-lock.json  package.json  style.css
site/src/: App.jsx  style.css
site/src/components/: Demo.jsx  Downloads.jsx  Faq.jsx  LinuxSetup.jsx
site/src/lib/: release.js
wix/: main.wxs
