[workspace]
resolver = "2"
members = [
    "crates/boinc-core",
    "crates/boinc-cli",
    "crates/boinc-app",
    "crates/boinc-integration",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/bartbeecoders/boinc"
description = "Convert files from one format to another, right from the file browser"

[workspace.dependencies]
boinc-core = { path = "crates/boinc-core" }
boinc-integration = { path = "crates/boinc-integration" }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
directories = "6"
floem = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
interprocess = "2"
notify-rust = "4"
pdf-extract = "0.12"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tray-icon = "0.24"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
