[package]
name = "boinc-app"
description = "Tray application with Floem UI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
boinc-core.workspace = true
boinc-integration.workspace = true
crossbeam-channel.workspace = true
directories.workspace = true
floem.workspace = true
interprocess.workspace = true
notify-rust.workspace = true
serde.workspace = true
serde_json.workspace = true
tray-icon.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[lints]
workspace = true
