[package]
name = "boinc-cli"
description = "Command-line interface; also the target invoked by OS context menus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "boinc"
path = "src/main.rs"

[dependencies]
boinc-core.workspace = true
boinc-integration.workspace = true
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
image.workspace = true
predicates = "3"
tempfile.workspace = true

[lints]
workspace = true
