[package]
name = "boinc-core"
description = "Core conversion engine: converter trait, registry, pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
image.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
image.workspace = true
tempfile.workspace = true
zip = "2"

[lints]
workspace = true
