[package]
name = "boinc-core"
description = "Core conversion engine: converter trait, registry, pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
image.workspace = true
pdf-extract.workspace = true
pulldown-cmark.workspace = true
tempfile.workspace = true
thiserror.workspace = true
vtracer.workspace = true

[dev-dependencies]
image.workspace = true
# Kept in lockstep with the lopdf version pdf-extract pins, so tests don't
# pull a second copy.
lopdf = "0.42"
tempfile.workspace = true
zip = "2"

[lints]
workspace = true
